--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,14 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "nodemailer": "^6.10.1",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
+    "@types/nodemailer": "^6.4.17",
     "@types/sqlite3": "^3.1.11",
     "nodemon": "^3.1.9",
     "ts-node-dev": "^2.0.0",
