--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "nodemailer": "^6.10.1",
+    "pino": "^9.6.0",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/sqlite3": "^3.1.11",
     "nodemon": "^3.1.9",
+    "pino-pretty": "^13.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
